fixed spacing a bit

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,7 +1,6 @@
 .jumbotron {
     background-color: cornflowerblue;
     text-align: right;
-    height: 400px;
 }
 
 input {
